[Feature] Enable sorting and search_after features in hybrid search (#827)
* Fix jdk version for CI test secure cluster action (#801) (#806)

Signed-off-by: Martin Gaievski <gaievski@amazon.com>
Co-authored-by: Martin Gaievski <gaievski@amazon.com>

* [Part 1] Collector for Sorting Results (#797)

* [Part 2] Normalization Phase for Sorting (#802)

* Normalization Phase for Sorting

Signed-off-by: Varun Jain <varunudr@amazon.com>

* Fixing compile test issue

Signed-off-by: Varun Jain <varunudr@amazon.com>

* Optimize code

Signed-off-by: Varun Jain <varunudr@amazon.com>

* Add method description

Signed-off-by: Varun Jain <varunudr@amazon.com>

* [Part 1] Collector for Sorting Results (#797)

* HybridSearchSortUtil class

Signed-off-by: Varun Jain <varunudr@amazon.com>

* Add Integ Tests

Signed-off-by: Varun Jain <varunudr@amazon.com>

* Add Sorting Integ tests

Signed-off-by: Varun Jain <varunudr@amazon.com>

* Add integ test for Sorting

Signed-off-by: Varun Jain <varunudr@amazon.com>

* Refactoring normalization processor workflow

Signed-off-by: Varun Jain <varunudr@amazon.com>

* Fix Unit Tests

Signed-off-by: Varun Jain <varunudr@amazon.com>

* Refactoring

Signed-off-by: Varun Jain <varunudr@amazon.com>

* Refactoring

Signed-off-by: Varun Jain <varunudr@amazon.com>

* Address Martin Comments

Signed-off-by: Varun Jain <varunudr@amazon.com>

* Optimising Normalization

Signed-off-by: Varun Jain <varunudr@amazon.com>

* Address Martin Comments

Signed-off-by: Varun Jain <varunudr@amazon.com>

* Address Martin Comments

Signed-off-by: Varun Jain <varunudr@amazon.com>

* Addressing Martin Comments

Signed-off-by: Varun Jain <varunudr@amazon.com>

* Addressing Vijay comments

Signed-off-by: Varun Jain <varunudr@amazon.com>

* Address Vijay Comments

Signed-off-by: Varun Jain <varunudr@amazon.com>

---------

Signed-off-by: Varun Jain <varunudr@amazon.com>

* Update bwc workflow to include 2.16.0-SNAPSHOT (#809) (#810)

* Increment BWC version

* Append 2.16.0-SN